5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3396/executions/1861_1291.log
== TEST (2019-06-26 18:17:13) 
-- CODE:
from numpy import*
from lin.alg import*
mat= [[50, 60, 40], [30, 40, 20], [10, 15, 8]]
for l in  range(0, 3):
	for c in range(0, 3):
		
-- ERROR:
File "XXXX", line 7
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:17:31) 
-- CODE:
from numpy import*
from lin.alg import*
mat= [[50, 60, 40], [30, 40, 20], [10, 15, 8]]
for l in  range(0, 3):
	for c in range(0, 3):
		print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:18:02) 
-- CODE:
from numpy import*

mat= [[50, 60, 40], [30, 40, 20], [10, 15, 8]]
for l in  range(0, 3):
	for c in range(0, 3):
		print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:20:05) 
-- CODE:
from numpy import*

mat= [[50, 60, 40], [30, 40, 20], [10, 15, 8]]
for l in  range(0, 3):
	for c in range(0, 3):
		nome= mola
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:21:52) 
-- CODE:
from numpy import*
x= array(eval("digite x:"))
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:22:00) 
-- CODE:
from numpy import*
x= array(eval("digite x:"))
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:23:51) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [0, 0, 0]

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:24:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [0, 0, 0]
ortopedico= [0, 0, 0]
tecido= [0, 0, 0]

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:25:07) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [0, 0, 0]
ortopedico= [0, 0, 0]
tecido= [0, 0, 0]
for x in range(0, 3):

		
		
-- ERROR:
File "XXXX", line 10
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:25:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [0, 0, 0]
ortopedico= [0, 0, 0]
tecido= [0, 0, 0]
for x in range(0, 3):

		
		
-- ERROR:
File "XXXX", line 10
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:26:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [0, 0, 0]
ortopedico= [0, 0, 0]
tecido= [0, 0, 0]
mat= [[50, 60, 40], [30, 40, 20], [10, 15, 8]]

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:28:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [0, 0, 0]
ortopedico= [0, 0, 0]
tecido= [0, 0, 0]
mat= [[50, 60, 40], [30, 40, 20], [10, 15, 8]]
for l in range(0, 3):
	x= float(input("digite x:"))

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:29:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [0, 0, 0]
ortopedico= [0, 0, 0]
tecido= [0, 0, 0]
mat= [[50, 60, 40], [30, 40, 20], [10, 15, 8]]
for l in range(0, 3):
	x= float(input("digite x:"))
	 for l in range(1, 3):
			y= float(input("digite y:"))
		

		
		
-- ERROR:
File "XXXX", line 9
    for l in range(1, 3):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:29:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [0, 0, 0]
ortopedico= [0, 0, 0]
tecido= [0, 0, 0]
mat= [[50, 60, 40], [30, 40, 20], [10, 15, 8]]
for l in range(0, 3):
	x= float(input("digite x:"))
	 for l in range(0, 3):
			y= float(input("digite y:"))
		

		
		
-- ERROR:
File "XXXX", line 9
    for l in range(0, 3):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:29:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [0, 0, 0]
ortopedico= [0, 0, 0]
tecido= [0, 0, 0]
mat= [[50, 60, 40], [30, 40, 20], [10, 15, 8]]
for l in range(0, 3):
	x= float(input("digite x:"))
	 for c in range(0, 3):
			y= float(input("digite y:"))
		

		
		
-- ERROR:
File "XXXX", line 9
    for c in range(0, 3):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:30:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [0, 0, 0]
ortopedico= [0, 0, 0]
tecido= [0, 0, 0]
mat= [[50, 60, 40], [30, 40, 20], [10, 15, 8]]
for l in range(0, 3):
	x= float(input("digite x:"))
	y= float(input("digite y:"))

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:30:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [0, 0, 0]
ortopedico= [0, 0, 0]
tecido= [0, 0, 0]
mat= [[50, 60, 40], [30, 40, 20], [10, 15, 8]]
for l in range(0, 3):
	x= float(input("digite x:"))
	y= float(input("digite y:"))
	z= float(inpput("digite z:"))

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:31:01) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [0, 0, 0]
ortopedico= [0, 0, 0]
tecido= [0, 0, 0]
mat= [[50, 60, 40], [30, 40, 20], [10, 15, 8]]
for l in range(0, 3):
	x= float(input("digite x:"))
	y= float(input("digite y:"))
	z= float(input("digite z:"))

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:31:28) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [0, 0, 0]
ortopedico= [0, 0, 0]
tecido= [0, 0, 0]
mat= [[50, 60, 40], [30, 40, 20], [10, 15, 8]]
for l in range(0, 3):
	x= float(input("digite x:"))
	y= float(input("digite y:"))
	z= float(input("digite z:"))

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:31:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [0, 0, 0]
ortopedico= [0, 0, 0]
tecido= [0, 0, 0]
mat= [[50, 60, 40], [30, 40, 20], [10, 15, 8]]
for l in range(0, 3):
	x= float(input("digite x:"))
	y= float(input("digite y:"))
	z= float(input("digite z:"))

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:31:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [0, 0, 0]
ortopedico= [0, 0, 0]
tecido= [0, 0, 0]
mat= [[50, 60, 40], [30, 40, 20], [10, 15, 8]]
for l in range(0, 3):
	x= float(input("digite x:"))
	y= float(input("digite y:"))
	z= float(input("digite z:"))

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:31:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [0, 0, 0]
ortopedico= [0, 0, 0]
tecido= [0, 0, 0]
mat= [[50, 60, 40], [30, 40, 20], [10, 15, 8]]
for l in range(0, 3):
	x= float(input("digite x:"))
	y= float(input("digite y:"))
	z= float(input("digite z:"))

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:31:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [0, 0, 0]
ortopedico= [0, 0, 0]
tecido= [0, 0, 0]
mat= [[50, 60, 40], [30, 40, 20], [10, 15, 8]]
for l in range(0, 3):
	x= float(input("digite x:"))
	y= float(input("digite y:"))
	z= float(input("digite z:"))

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:31:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [0, 0, 0]
ortopedico= [0, 0, 0]
tecido= [0, 0, 0]
mat= [[50, 60, 40], [30, 40, 20], [10, 15, 8]]
for l in range(0, 3):
	x= float(input("digite x:"))
	y= float(input("digite y:"))
	z= float(input("digite z:"))

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:31:36) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [0, 0, 0]
ortopedico= [0, 0, 0]
tecido= [0, 0, 0]
mat= [[50, 60, 40], [30, 40, 20], [10, 15, 8]]
for l in range(0, 3):
	x= float(input("digite x:"))
	y= float(input("digite y:"))
	z= float(input("digite z:"))

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:31:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [0, 0, 0]
ortopedico= [0, 0, 0]
tecido= [0, 0, 0]
mat= [[50, 60, 40], [30, 40, 20], [10, 15, 8]]
for l in range(0, 3):
	x= float(input("digite x:"))
	y= float(input("digite y:"))
	z= float(input("digite z:"))

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:31:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [0, 0, 0]
ortopedico= [0, 0, 0]
tecido= [0, 0, 0]
mat= [[50, 60, 40], [30, 40, 20], [10, 15, 8]]
for l in range(0, 3):
	x= float(input("digite x:"))
	y= float(input("digite y:"))
	z= float(input("digite z:"))

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:31:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [0, 0, 0]
ortopedico= [0, 0, 0]
tecido= [0, 0, 0]
mat= [[50, 60, 40], [30, 40, 20], [10, 15, 8]]
for l in range(0, 3):
	x= float(input("digite x:"))
	y= float(input("digite y:"))
	z= float(input("digite z:"))

		
		
-- EXECUTION TIME:
1.0584
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/1291/main.py", line 8, in <module>
    x= float(input())
ValueError: could not convert string to float: '[623980,350700,134591]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:34:38) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [0, 0, 0]
ortopedico= [0, 0, 0]
tecido= [0, 0, 0]
mat= [[50, 60, 40], [30, 40, 20], [10, 15, 8]]
for l in range(0, 3):
	x= float(input("digite x:"))
	y= float(input("digite y:"))
	z= float(input("digite z:"))
    print(regular:)
		
		
-- ERROR:
File "XXXX", line 11
    print(regular:)
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:38:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [50, 60, 40]
ortopedico= [30, 40, 20]
tecido= [10, 15, 8]
for l in range(0, 3):
	x= float(input("digite x:"))
	y= float(input("digite y:"))
	z= float(input("digite z:"))
    print("regular:
		
		
-- ERROR:
File "XXXX", line 10
    print("regular:
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:38:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [50, 60, 40]
ortopedico= [30, 40, 20]
tecido= [10, 15, 8]
for l in range(0, 3):
	x= float(input("digite x:"))
	y= float(input("digite y:"))
	z= float(input("digite z:"))

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:39:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
regular= [50, 60, 40]
ortopedico= [30, 40, 20]
tecido= [10, 15, 8]
for l in range(0, 3):
	x= float(input("digite x:"))
	y= float(input("digite y:"))
	z= float(input("digite z:"))

		
		
-- EXECUTION TIME:
1.17648
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/1291/main.py", line 7, in <module>
    x= float(input())
ValueError: could not convert string to float: '[623980,350700,134591]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
